fix squished dot from scale transform E of sixxes

--- a/src/sixxesHeader.scss
+++ b/src/sixxesHeader.scss
@@ -24,10 +24,6 @@
 		letter-spacing: -10px;
 		color: inherit;
 	}
-
-	.lite {
-		font-size: 0.75em;
-	}
 }
 
 .logo-dice6 {
@@ -35,9 +31,26 @@
 	transform: rotate(315deg);
 	position: relative;
 	display: inline-flex;
-	left: -24px;
+	left: -19px;
 	border-radius: 8px;
 	border: 4px white solid;
-	position: relative;
 	top: -51px;
+}
+
+.gray-box {
+	background-color: rgb(200, 200, 200);
+	position: relative;
+	display: inline-flex;
+	height: 10px;
+	width: 10px;
+	left: 26px;
+	top: -75px;
+	z-index: 30;
+	.white-circle {
+		margin: auto;
+		border-radius: 100%;
+		height: 6px;
+		width: 6px;
+		background-color: white;
+	}
 }
